# OpenCVCameraWrapper

./: CMakeLists.txt  CameraWrapper.cpp  README.md  demo.cpp  sample.cpp
